# cosmic-chat

./: CHANGELOG.md  Cargo.toml  build.sh
resources/: cosmic-chat.desktop
src/: app.rs  config.rs  irc_client.rs  main.rs
